feat(task-146): extract path parameters for @Create and @Update methods (#53)
* feat(task-146): extract path parameters for @Create and @Update methods

* review: fix Javadoc placement, remove duplicate helper, add controller-to-service tests

Agent-Logs-Url: https://github.com/stijnvanbael/prefab/sessions/816308b5-ca58-4f0b-81c5-3dd009f8c3b6

Co-authored-by: stijnvanbael <1050148+stijnvanbael@users.noreply.github.com>

* feat(task-146): extract path parameters for @Create and @Update methods

* feat(task-146): extract path parameters for @Create and @Update methods

* review: remove unused imports, fix wildcard import, fix indentation

Agent-Logs-Url: https://github.com/stijnvanbael/prefab/sessions/b051f19b-4eeb-415f-8dc2-7a37088faed5

Co-authored-by: stijnvanbael <1050148+stijnvanbael@users.noreply.github.com>

---------

Co-authored-by: Stijn Van Bael <qtj487@fluvius.be>
Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: stijnvanbael <1050148+stijnvanbael@users.noreply.github.com>